Update and rename ci.yml to python_test.yml

--- a/.github/workflows/python_test.yml
+++ b/.github/workflows/python_test.yml
@@ -1,12 +1,5 @@
 name: Run pytest CI
-on:
-  push:
-    branches:
-      - auto
-      - master
-  pull_request:
-    branches:
-      - "**"
+on: push
 
 jobs:
   build:
